<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/activeDeviceControllContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sleepButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_sleep"
            android:paddingTop="2dp"
            android:text="@string/mainXML_sleepAllButton_text" />

        <Button
            android:id="@+id/shutDownButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_power"
            android:paddingTop="2dp"
            android:text="@string/mainXML_shutdownAllButton_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inactiveDeviceControllContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/wakeUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_power"
            android:paddingTop="2dp"
            android:text="@string/mainXML_wakeUpAllButton_text" />
    </LinearLayout>

    <ListView
        android:id="@+id/deviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>