<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/controlContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/activeDeviceControllContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_background"
            android:paddingLeft="3dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp" >

            <Button
                android:id="@+id/sleepButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_sleep"
                android:text="@string/mainXML_sleepAllButton_text" />

            <Button
                android:id="@+id/shutDownButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_power"
                android:text="@string/mainXML_shutdownAllButton_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inactiveDeviceControllContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/list_item_background"
            android:paddingLeft="3dp"
            android:paddingRight="5dp"
            android:paddingTop="3dp" >

            <Button
                android:id="@+id/wakeUpButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_power"
                android:text="@string/mainXML_wakeUpAllButton_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/separatorContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/activeDeviceIndicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            layout="@layout/separator_view" />

        <include
            android:id="@+id/inactiveDeviceIndicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            layout="@layout/separator_view" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/activeDeviceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>

        <ListView
            android:id="@+id/inactiveDeviceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>
    </LinearLayout>

</LinearLayout>